restored test comment of Test7903148